[package]
name = "retry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project = { version = "1.1.3", optional = true }

[features]
default = ["futures"]
builder = []
futures = ["dep:pin-project"]

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }

